added task help to template and to install.py

--- a/heasoftpy/packages/template/template.py.html
+++ b/heasoftpy/packages/template/template.py.html
@@ -7,7 +7,7 @@
 </style>    
 <title>template help file</title>
 </head>
-
+</html>
 <body>
 <h2>NAME</h2>
 template -- a template task that does this, this, and that.
